--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "^18.2.0",
     "react-daisyui": "^2.3.1",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^1.5.1"
+    "react-icons": "^4.4.0",
+    "tailwind-merge": "^1.5.1",
+    "theme-change": "^2.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
